		(svn r5805), regarding shifted immediate values, which caused
		OpenBSD/cats to fail during install.
20180920	Making ARM disassembly show THUMB instructions, if the lowest
		bit of the address is 1. (They can not be executed yet though.)
		Fixing broken "print" command. Oops.
		Implement some more THUMB disassembly.
		Fail rather than silently treating ARM instructions beginning
		with 0xf as nops.
		Allow the emulator to start in THUMB mode (lowest pc bit set).
20180921        Continuing on ARM THUMB disassembly.
		Beginning to implement very slow THUMB interpretation (not
		dyntrans). Horrible performance-wise, but better than nothing.
20180924	Oops, forgot to add machine_rpi.cc back in 20131006.
20180925	Cleaning up some more files on make clean_all. Thanks to
		Göran Weinholt for noticing.
20180927	Fixing big-endian ARM loads/stores (except perhaps double-word
		loads and stores); probably slows everything down a bit.
20181001	Continuing on the slow THUMB instruction interpretation.
20181008	Disk images added using -d for SGI modes are now SCSI, not IDE.
		Importing newer crimereg.h and crmfbreg.h from NetBSD.
20181009	Moving around SGI O2 graphics code, in preparation for making
		more use of the "new" NetBSD defines.
20181011	SGI O2 GBE now switches resolution if the OS wants it (i.e.
		Linux/O2), rather than requiring a recompile.
		Also, detection of Linux' "tweaked" (linear) mode, thus
		avoiding a recompile when experimenting with Linux/O2.
		NetBSD can now show some output on the O2 framebuffer too.
20181012	Fixing a bug in the generic X11 framebuffer output, so that
		scaledown is preserved even when a guest OS switches resultion
		at runtime.
		Continuing on the SGI O2 graphics; when the nr of tiles or
		"partial pixels" is in mismatch with the screen resolution,
		the skewed result now looks the same as on my real physical O2.
20181013	More SGI O2 graphics work: TLBs. OpenBSD can now show graphical
		console messages.